src/main/java/com/example/lottery/Util/error/PermissionException.java
package com.example.lottery.Util.error;

public class PermissionException extends Exception {
    // Constructor that accepts a message
    public PermissionException(String message) {
        super(message);
    }
}
